fixes ENGIN-694 banner lines on safari

--- a/src/components/modules/layout/layout.module.css
+++ b/src/components/modules/layout/layout.module.css
@@ -20,7 +20,7 @@
 
 .banner::before {
   content: ' ';
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
